# roe

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  ]  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml  labels.json  labels.yaml  markdown-link-check.json
.github/workflows/: ci.yaml  code-coverage.yaml
bstr/: all.html  fn.B.html  fn.decode_last_utf8.html  fn.decode_utf8.html  index.html  sidebar-items.js  struct.BStr.html  struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.EscapeBytes.html  struct.Fields.html  struct.FieldsWith.html  struct.Find.html  struct.FindReverse.html  struct.Finder.html  struct.FinderReverse.html  struct.Lines.html  struct.LinesWithTerminator.html  struct.Split.html  struct.SplitN.html  struct.SplitNReverse.html  struct.SplitReverse.html  struct.Utf8Chunk.html  struct.Utf8Chunks.html  struct.Utf8Error.html  trait.ByteSlice.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  (+2 more)
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
memchr/memmem/: enum.Prefilter.html  fn.find.html  fn.find_iter.html  fn.rfind.html  fn.rfind_iter.html  index.html  struct.FindIter.html  struct.FindRevIter.html  struct.Finder.html  struct.FinderBuilder.html  struct.FinderRev.html
roe/: all.html  enum.LowercaseMode.html  enum.TitlecaseMode.html  enum.UppercaseMode.html  fn.lowercase.html  fn.make_ascii_lowercase.html  fn.make_ascii_titlecase.html  fn.make_ascii_uppercase.html  fn.titlecase.html  fn.to_ascii_lowercase.html  fn.to_ascii_titlecase.html  fn.to_ascii_uppercase.html  fn.to_titlecase.html  fn.uppercase.html  index.html  sidebar-items.js  struct.InvalidCaseMappingMode.html  struct.InvalidLowercaseMode.html  struct.Lowercase.html  struct.Titlecase.html  struct.Uppercase.html
roe/lowercase/: struct.Lowercase.html
roe/titlecase/: struct.Titlecase.html
roe/uppercase/: struct.Uppercase.html
scripts/: titlecase_mappings.rb
src/: ascii.rs  capitalize.rs  lib.rs  lowercase.rs  titlecase.rs  uppercase.rs
src/ascii/: lowercase.rs  titlecase.rs  uppercase.rs
src/bstr/: ascii.rs.html  bstr.rs.html  escape_bytes.rs.html  ext_slice.rs.html  impls.rs.html  lib.rs.html  utf8.rs.html
src/lowercase/: ascii.rs  full.rs  mod.rs
src/memchr/: cow.rs.html  lib.rs.html
src/roe/: ascii.rs.html  lib.rs.html  lowercase.rs.html  uppercase.rs.html
src/titlecase/: ascii.rs  full.rs  mod.rs
src/unicode/: mod.rs  std_case_mapping_iter.rs  titlecase.rs  ucd_generated_case_mapping.rs
src/uppercase/: ascii.rs  full.rs  mod.rs
(+104 files in other folders)
