[package]
name = "roe"
version = "0.0.5" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/roe"
documentation = "https://docs.rs/roe"
homepage = "https://github.com/artichoke/roe"
description = "Unicode case conversion"
keywords = ["capitalize", "case", "lowercase", "unicode", "uppercase"]
categories = ["encoding", "internationalization", "no-std", "no-std::no-alloc", "text-processing"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
# Enable dependency on `std`, the Rust standard library. This feature enables
# `std::error::Error` implementations on the error types in `roe`.
std = ["alloc"]
# Enable a dependency on `alloc`, The Rust collections library. This feature
# enables APIs that depend on `Vec` and `String`.
alloc = []

[dependencies]
bstr = { version = "1.0.1", default-features = false }

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `roe` has the same API and code on all targets.
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
